# PY_HA

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_CONTEXT.md  README.md  mcp_config.yaml  pyproject.toml  start.py
.claude/: harnessgenj_hook.py
.harnessgenj/: completed_tasks.json  current_task.json  framework_state.md  intents.json  knowledge.json  monitor_report.md  permission_violations.json  project.json  quality_tracker.json  scores.json  session_state.json  sessions.json  state.json
.harnessgenj/agents/: architect.md  developer.md  product_manager.md  tech.md  tester.md
.harnessgenj/backups/: progress.md.20260410_193629.bak  progress.md.20260410_193703.bak  progress.md.20260410_194331.bak
.harnessgenj/documents/: development.md  integration_improvement.md  progress.md  project_overview.md  quality_report_20260410.md  requirements.md  violation_record.md
.harnessgenj/events/: event_20260409_232654_on_issue_found.json  event_20260410_193629_on_task_complete.json  event_20260410_193629_on_write_complete.json  event_20260410_194331_on_task_complete.json  event_20260410_194331_on_write_complete.json  event_20260410_214809_on_issue_found.json  event_20260410_215300_on_issue_found.json
.harnessgenj/knowledge/: index.md
.harnessgenj/knowledge/general/: description.md  tech_stack.md
.harnessgenj/summaries/: architect.summary.md  conventions.summary.md  developer.summary.md  product_manager.summary.md  tech.summary.md  tester.summary.md  workflow.summary.md
docs/: Architecture_Comprehensive_Review.md  Architecture_Optimization_Review.md  Architecture_Review_v1.5.0.md  HGJ_vs_ClaudeCode_Architecture_Comparison.md  OPTIMIZATION_REPORT.md  REFACTOR_PLAN.md  Test_Report_v1.4.3.md  V1.0_REVIEW_REPORT.md  V1.1_OPTIMIZATION_REPORT.md  deployment.md  framework_optimization_plan.md  多Agent架构分析.md
examples/: basic_usage.py  harness_capabilities.py  harness_demo.py  jvm_memory_demo.py  multi_agent.py  os_task_demo.py  quickstart.py
skills/: py_ha.md
src/harnessgenj/: __init__.py  cli.py  engine.py
src/harnessgenj/common/: __init__.py  knowledge_types.py
src/harnessgenj/dashboard/: __init__.py  tui.py
src/harnessgenj/evolution/: pattern_extractor.py
src/harnessgenj/harness/: __init__.py  adversarial.py  event_triggers.py  hooks_auto_setup.py  hybrid_integration.py
src/harnessgenj/mcp/: __init__.py  config.py  protocol.py  server.py
src/harnessgenj/notify/: __init__.py
src/harnessgenj/quality/: __init__.py  score.py
src/harnessgenj/roles/: __init__.py  architect.py  base.py  bug_hunter.py  code_reviewer.py  developer.py  doc_writer.py  product_manager.py  project_manager.py  tester.py
src/harnessgenj/utils/: __init__.py  agent_context.py  hooks_common.py
src/harnessgenj/workflow/: __init__.py  collaboration.py  coordinator.py  intent_router.py  pipeline.py  shutdown_protocol.py  task_scheduler.py  task_state.py
src/py_ha/: __init__.py  cli.py  engine.py
src/py_ha/core/: __init__.py  loader.py  spec.py
src/py_ha/harness/: __init__.py  agents_knowledge.py  context_assembler.py  context_engine.py  filesystem.py  hooks.py  human_loop.py  planning.py  sandbox.py  subagent.py
src/py_ha/kernel/: __init__.py  consumer.py  kernel.py  producer.py  queue.py  scheduler.py  task.py
src/py_ha/mcp/: __init__.py  server.py
src/py_ha/memory/: __init__.py  assembler.py  gc.py  heap.py  hotspot.py  manager.py
src/py_ha/roles/: __init__.py  architect.py  (+6 more)
tests/: conftest.py  test_core.py  test_engine.py  test_framework_announcement.py  test_full_integration.py  test_gan_activation.py  test_harness.py  test_hooks_enforcement.py  test_kernel.py  test_mcp.py  test_memory.py  test_notifier.py  test_runtime.py  test_storage.py
tests/dashboard/: __init__.py  test_dashboard.py
tests/engine/: test_chat_enhanced.py
tests/evolution/: __init__.py  test_evolution.py
tests/integration/: test_architecture_integration.py  test_full_data_flow.py
tests/manual/: diag_test.py  full_chain_test.py
tests/mcp/: __init__.py  test_mcp.py
tests/notify/: __init__.py  test_notify_enhanced.py
tests/quality/: test_score_system.py
tests/roles/: test_bug_hunter.py  test_code_reviewer.py  test_developer.py  test_developer_config.py  test_product_manager.py  test_project_manager.py  test_tester.py
tests/utils/: __init__.py  test_agent_context.py
tests/workflow/: test_autonomous_execution.py  test_intent_router.py  test_shutdown_protocol.py
(+23 files in other folders)
